# cpp-softserve

./: .gitignore  1 - tarea_permutar.cpp  2.1 - tarea_calculadora_salario.cpp  2.2 - tarea_calculadora_temp.cpp  2.3 - tarea_volumen.cpp  3. tarea_volumen_class.cpp  4 . tarea_memory.cpp  5.ejercicio_nodos_smartpointers.cpp  README.md
2.2 refactoring_calc_temp/: CMakeLists.txt
2.2 refactoring_calc_temp/include/: constants.h  functions.h
2.2 refactoring_calc_temp/src/: main.cpp  temp_functions.cpp
2.3 refactoring_volume/: CMakeLists.txt
2.3 refactoring_volume/include/: constants.h  functions.h
2.3 refactoring_volume/src/: main.cpp  volume_functions.cpp
